chore: remove dependency of UIScene, add key/value on xcconfig and replace Info.plist for app

--- a/DemoSchemesSetting/Configs/Development/Development.xcconfig
+++ b/DemoSchemesSetting/Configs/Development/Development.xcconfig
@@ -13,3 +13,7 @@
 
 // Remember use actually path on folder that do not use xcode looks.
 #include "Pods/Target Support Files/Pods-DemoSchemesSetting/Pods-DemoSchemesSetting.development.xcconfig"
+
+// App Settings
+APP_NAME = DemoSchemes (dev)
+APP_BUNDLE_ID = com.kin.DemoSchemesSetting.dev
