--- a/DemoSchemesSetting/Configs/Production/Production.xcconfig
+++ b/DemoSchemesSetting/Configs/Production/Production.xcconfig
@@ -12,3 +12,7 @@
 
 // Remember use actually path on folder that do not use xcode looks.
 #include "Pods/Target Support Files/Pods-DemoSchemesSetting/Pods-DemoSchemesSetting.production.xcconfig"
+
+// App Settings
+APP_NAME = DemoSchemes (prod)
+APP_BUNDLE_ID = com.kin.DemoSchemesSetting
