--- a/DemoSchemesSetting/Configs/Staging/Staging.xcconfig
+++ b/DemoSchemesSetting/Configs/Staging/Staging.xcconfig
@@ -12,3 +12,7 @@
 
 // Remember use actually path on folder that do not use xcode looks.
 #include "Pods/Target Support Files/Pods-DemoSchemesSetting/Pods-DemoSchemesSetting.staging.xcconfig"
+
+// App Settings
+APP_NAME = DemoSchemes (staging)
+APP_BUNDLE_ID = com.kin.DemoSchemesSetting.staging
